--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 body {
     color: aliceblue;
     background-color: rgb(0, 0, 0);
-    font-size: 30px;
+    font-size: 18px;
     margin: 0;
 }
 
@@ -16,13 +16,11 @@ a {
 .section1 {
     position: relative; 
     height: 100vh;
-    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     background-image: url("https://preview.redd.it/live-house-starry-by-art-director-taracod-v0-00ffw7oyjf8a1.jpg?auto=webp&s=ddee6f0d88ba268be0f5dd3f4fb00a8d74b5f6cf");
     color: aliceblue;
-    background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
@@ -47,26 +45,21 @@ a {
 }
 
 .section3 {
-    margin-top: 180px;
     background: none;
 }
 
 h1 {
     position: relative;
     color: #f4ff20;  
-    font-size: 6rem;
+    font-size: 2rem;
     line-height: 0.9;
     text-align: center;
     transition: 0.3s;
 }
 
-h1:hover {
-    font-size: 9rem;
-}
-
 h2 {
     margin: 20px 0px 0px 0px;
-    padding: 10px;
+    padding: 30px;
     color: rgb(0, 0, 0);
 }
 
@@ -79,25 +72,12 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 500px;
+    height: 200px;
     width: 100%;
     border-style: solid;
     border-width: 0 0 0px 0;
     border-color: aliceblue;
-    margin: 20px;
     background-color: rgb(255, 222, 35);
-}
-
-.character {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 250px;
-    width: 100%;
-    margin-top: 20px;
-    margin-bottom: 70px;
-    background-color: rgb(0, 0, 0);
 }
 
 .char {
@@ -143,8 +123,8 @@ h3 {
 }
 
 .playPause img {
-    width: 100%;
-    height: auto;
+    width: 16px;
+    height: 16px;
 }
 
 nav {
@@ -158,7 +138,7 @@ nav {
     position: fixed;
     top: 0;
     width: 100%;
-    height: 70px;
+    height: 50px;
     z-index: +1;
     display: flex;
     justify-content: space-between;
@@ -244,38 +224,34 @@ nav {
     font-size: 20px;
 }
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
     body {
-        font-size: 1.8rem;
+        font-size: 20px;
     }
 
     h1 {
-        font-size: 3rem;
+        font-size: 4rem;
     }
 
-    h3 {
-        font-size: 1.6rem;
+    nav {
+        height: 60px;
     }
 
-    .playPause {
-        padding: 6px 12px;
+    .songs {
+        width: 180px;
     }
 }
 
-@media (max-width: 480px) {
+@media (min-width: 1024px) {
     body {
-        font-size: 1.5rem;
+        font-size: 24px;
     }
 
     h1 {
-        font-size: 2.5rem;
+        font-size: 6rem;
     }
 
-    h3 {
-        font-size: 1.4rem;
-    }
-
-    .playPause {
-        padding: 4px 8px;
+    .songs {
+        width: 200px;
     }
 }
